# backend/routes/web.go
@@ -36,7 +36,9 @@ func Web() {
 	facades.Route().Get("/api/extensions/:id", extensionController.Show)
 	facades.Route().Put("/api/extensions/:id", extensionController.Update)
 	facades.Route().Get("/api/modules", extensionController.Modules)
+	facades.Route().Get("/api/modules/:id", extensionController.ModuleShow)
 	facades.Route().Get("/api/plugins", extensionController.Plugins)
+	facades.Route().Get("/api/plugins/:id", extensionController.PluginShow)
 	facades.Route().Put("/api/plugins/:id/state", extensionController.UpdatePlugin)
 	menuController := controllers.NewMenuController(authController)
 	resourceController := controllers.NewConfiguredResourceController(authController)
